fix sidebar z-index

--- a/apps/admin/src/assets/sass/abstracts/_constants.scss
+++ b/apps/admin/src/assets/sass/abstracts/_constants.scss
@@ -6,11 +6,14 @@ $no-view-z: 600;
 $global-header-z: 420;
 $main-overlay-z: 220;
 $header-menu-dropdown-z: 610;
-$nav-action-header-z: 120;
+$nav-action-header-z: 120; //while header is sticky
 $form-action-z: 121;
 $progress-bar-z: 480;
 $nav-action-sub-header: 110;
 $main-menu-z: 400;
+$nav-header-z: 140;
+$night-audit-info-z: 130;
+$sidebar-z: 150;
 // Breakpoint variables
 
 $S: 480px;
